<resources>
    <string name="app_name">Rattan planters</string>
    <string name="text_prog">Кашпо напольные и подвесные. Изделия из ротанга.</string>
    <string name="price">Цена:</string>
    <string name="volume">Объем</string>
    <string name="descriptionR1">Кашпо, оплетенное полиротангом.
        Объёмная пухлая форма, дренажные отверстия по низу.</string>
    <string name="descriptionProduct">Название товара</string>
    <string name="descriptionVolume">Объём</string>
    <string name="height">Высота:</string>
    <string name="lowoutdiam">Нижний внешний диаметр:</string>
    <string name="widoutdiam">Внешний диаметр по самой широкой части:</string>
    <string name="colorselection">Цвет изделий обговаривается при заказе</string>
    <string name="descriptionProductPage">Описание товара</string>
    <string name="colorProductPage">На фото представлен цвет: </string>
    <string name="fromOrder">Под заказ:</string>
    <string name="sm">см</string>
    <string name="contactsButton">Контакты</string>
    <string name="cartButton">Корзина</string>
    <string name="contacts">Контакты</string>
    <string name="forMainPage">На главную</string>
    <string name="name">Екатерина</string>
    <string name="name_phone">Телефон</string>
    <string name="rattan_planters_gmail_com">Rattan_planters@gmail.com</string>
    <string name="e_mail">e-mail:</string>
    <string name="_7_950_000_00_00">+7 (950) 000 - 00 - 00</string>
    <string name="socialpage">Социальные сети:</string>


</resources>